--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "scripts": {
+    "build": "vite build"
+    },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "tailwindcss": "^4.1.11"
